Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-61416

Indefinitely retry errors in rename coordinator

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 5.2.0, 5.1.2, 5.0.6
    • Affects Version/s: 5.1.0, 5.0.3
    • Component/s: Sharding
    • Labels:
      None
    • Fully Compatible
    • ALL
    • v5.1, v5.0
    • Sharding EMEA 2021-11-29

      DDL coordinators share a common retry logic that enumerates the exceptions that must be retried. All other errors result in the operation being interrupted and the coordinator getting released.

      Since the rename coordinator must never be released in case of unexpected errors, add a specialized logic to indefinitely retry the execution.

            Assignee:
            pierlauro.sciarelli@mongodb.com Pierlauro Sciarelli
            Reporter:
            pierlauro.sciarelli@mongodb.com Pierlauro Sciarelli
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: