SERVER-61416 Indefinitely retry errors in rename coordinator